# seoslug

./: .gitignore  LICENSE  README.md  mkdocs.yml  plan.md  pyproject.toml  spec.md  zensical.toml
.github/workflows/: deploy-docs.yml  publishing.yml  test.yml
docs/: api-reference.md  api.md  async-builder.md  builder-pattern.md  changelog.md  comparison.md  contributing.md  core-concepts.md  development.md  factories.md  fallback-chains.md  faq.md  getting-started.md  hooks.md  index.md  license.md  llms-full.txt  llms.txt  migration.md  payload-class.md  registry.md  robots.txt  rules-and-fallbacks.md  schema-jsonld.md  seo-payload.md  testing.md  url-normalization.md  usage-examples.md  validation.md
docs/configuration/: index.md  seo-config.md  seo-entity.md  seo-overrides.md  url-policy.md
docs/integrations/: astro.md  django.md  fastapi.md  flask.md  gatsby.md  hugo.md  index.md  nextjs.md  nuxt.md  quartz.md  ssg.md  starlette.md  strapi.md  sveltekit.md  zensical.md
docs/recipes/: blog-post.md  category-page.md  index.md  multi-language.md  product-page.md  search-results.md
docs/stylesheets/: extra.css
overrides/: main.html
scripts/: generate_llms_full.py  generate_seo.py
src/seoslug/: __init__.py  __main__.py  async_builder.py  builder.py  cli.py  config.py  exceptions.py  factories.py  hooks.py  html_validation.py  jsonld.py  normalization.py  payload.py  registry.py  schemas.py  text.py  validation.py
src/seoslug/contrib/: hugo.py  quartz.py  zensical.py
tests/: conftest.py  test_async_builder.py  test_builder.py  test_config.py  test_factories.py  test_fallbacks.py  test_hooks.py  test_html_validation.py  test_hugo.py  test_jsonld.py  test_normalization.py  test_payload.py  test_quartz.py  test_regression_fixtures.py  test_robots_rules.py  test_schemas.py  test_text.py  test_validation.py  test_zensical.py
