[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "seoslug"
version = "1.1.0"
description = "Framework-agnostic canonical URL normalization and SEO payload generation"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Emiliano Gandini Outeda", email = "emiliano.gandini@protonmail.com" }
]
license = "MIT"
keywords = ["seo", "canonical", "urls", "metadata", "open-graph", "twitter-cards"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["lxml", "detrack"]
license-files = ["LICENSE"]

[project.optional-dependencies]
docs = ["zensical"]
test = ["pytest", "pytest-cov"]

[project.urls]
Documentation = "https://deepwiki.com/emiliano-go/seoslug/"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
