[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "seoslug"
version = "2.2.0"
description = "Framework-agnostic canonical URL normalization and deterministic SEO payload generation"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Emiliano Gandini Outeda", email = "emiliano.gandini@protonmail.com" }
]
license = "MIT"
keywords = ["seo", "canonical", "urls", "metadata", "open-graph", "twitter-cards"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []
license-files = ["LICENSE"]

[project.optional-dependencies]
fast = ["lxml", "detrack"]
light = []
test = ["pytest", "pytest-asyncio", "pytest-cov", "pyyaml", "tomli; python_version < \"3.11\""]

[project.urls]
Documentation = "https://deepwiki.com/emiliano-go/seoslug/"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
